Turn on right panel of UV to display metadata (we hope)

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -46,7 +46,7 @@ layout: page
               "limitLocales": false,
               "overrideFullScreen": false,
               "pagingEnabled": false,
-              "rightPanelEnabled": false
+              "rightPanelEnabled": true
              }
         });
       });
