--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -40,7 +40,7 @@ layout: page
         cb({
             "options": {
               "dropEnabled": true,
-              "footerPanelEnabled": false,
+              "footerPanelEnabled": true,
               "headerPanelEnabled": false,
               "leftPanelEnabled": false,
               "limitLocales": false,
