footer and override full screen set to true

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -40,11 +40,11 @@ layout: page
         cb({
             "options": {
               "dropEnabled": true,
-              "footerPanelEnabled": false,
+              "footerPanelEnabled": true,
               "headerPanelEnabled": false,
               "leftPanelEnabled": false,
               "limitLocales": false,
-              "overrideFullScreen": false,
+              "overrideFullScreen": true,
               "pagingEnabled": false,
               "rightPanelEnabled": true
              }
