--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -44,7 +44,7 @@ layout: page
               "headerPanelEnabled": false,
               "leftPanelEnabled": false,
               "limitLocales": false,
-              "overrideFullScreen": true,
+              "overrideFullScreen": false,
               "pagingEnabled": false,
               "rightPanelEnabled": true
              }
